syntax = "proto3";

package Protos.Dto.User.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.User.Request";

message GetUserRequest
{
	int32 UserId = 1;
}
